  the compile-clx and load-clx functions which are defined in the defsystem.l
  file have been moved to the user package from the xlib package, since the xlib 
  package isn't defined when the defsystem.l file is loaded.

o excldefsys.l has been merged into defsystem.l.  You don't have to rename
  excldefsys.l to defsystem.l anymore.

o User-specified-size/position-p hints are now set correctly.
  These hints were being ignored if the size-hints structure did not
  define the corresponding geometry slots. But ICCCM declares these
  slots to be obsolete.

o (setf wm-command) has been changed to use PRIN1 inside the ANSI Common Lisp
  form WITH-STANDARD-IO-SYNTAX (or the equivalent defined in dependent.l), with
  elements of command separated by NULL characters.  This enables 
    (with-standard-io-syntax (mapcar #'read-from-string (wm-command window)))
  to recover a lisp command.

o A typo in X-TYPE-ERROR has been fixed.

o The WITH-GCONTEXT macro has been changed so that if you supply nil for a
  property value, WITH-GCONTEXT is will leave the property unchanged.  It used
  to always change the property without regard for whether the supplied value
  was nil.  This change to how the macro expands, so user code has to be 
  recompiled for the change to take effect.

o Since ANSI Common Lisp doesn't have CHAR-BIT, the implementation of
  DEFAULT-KEYSYM-TRANSLATE is now implementation dependent in ANSI Common Lisp
  implementations, with the default doing nothing to character objects.  In
  non-ANSI Common Lisps and lispms, it still uses CHAR-BIT. The definition of
  DEFAULT-KEYSYM-TRANSLATE has been moved to dependent.l.

o The image putting, getting, and copying code has been sped up a bit for lispm, 
  lcl3.0, and excl.

o The lcl3.0 io code has been sped up a bit by using read-array instead of
  fast-read-byte.

o READ-RESOURCES now handles any lines that start with # and don't start with
  #include as comments.